Update 'java-springboot-frmsuvgb' component image to: quay.io/sjmrhtap/java-springboot-frmsuvgb:f8cce5f14142a258299d2ee8929389da48340de3@sha256:822ed42b8c768c4252224d9ab768794c4ca30249eb548d941050d3fc029722a2

--- a/components/java-springboot-frmsuvgb/overlays/development/deployment-patch.yaml
+++ b/components/java-springboot-frmsuvgb/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: java-springboot-frmsuvgb
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-tssc/task-runner:1.7
-        name: container-image  
+        - image: quay.io/sjmrhtap/java-springboot-frmsuvgb:f8cce5f14142a258299d2ee8929389da48340de3@sha256:822ed42b8c768c4252224d9ab768794c4ca30249eb548d941050d3fc029722a2
+          name: container-image
